<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerHome"
    android:background="@color/black">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="162dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/fuelpass_station_management_logo" />

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="410dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.19999999">

        <Button
            android:id="@+id/owner_home_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/owner_home_btn1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingVertical="20dp"/>

        <Button
            android:id="@+id/owner_home_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/owner_home_btn2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingVertical="20dp"/>

        <Button
            android:id="@+id/owner_home_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/owner_home_btn3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingVertical="20dp"/>

        <Button
            android:id="@+id/owner_home_btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/owner_home_btn4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingVertical="20dp"/>

        <Button
            android:id="@+id/owner_home_btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/owner_home_btn5"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingVertical="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>