<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerStationRestock"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="162dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/fuelpass_station_management_logo" />

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="410dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.19999999">

        <TextView
            android:id="@+id/owner_station_restock_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingBottom="40dp"
            android:text="@string/owner_station_restock_header"
            android:textColor="@color/color_1"
            android:textSize="34sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_style"
            android:layout_marginBottom="15dp"
            >

            <Spinner
                android:id="@+id/owner_station_restock_input1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/owner_station_restock_input1"
                android:backgroundTint="@color/color_1"
                android:contentDescription="@string/owner_station_restock_input1"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                />

        </RelativeLayout>


        <EditText
            android:id="@+id/owner_station_restock_input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_field_style"
            android:ems="10"
            android:fontFamily="@font/quicksand_semi_bold"
            android:hint="@string/owner_station_restock_input2"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">


            <Button
                android:id="@+id/owner_station_restock_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/owner_station_restock_btn1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="openDatePicker"
                android:background="@drawable/input_field_style"
                android:paddingHorizontal="20dp"/>

            <Button
                android:id="@+id/owner_station_restock_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/owner_station_restock_btn2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="popTimePicker"
                android:background="@drawable/input_field_style" />

        </LinearLayout>

        <Button
            android:id="@+id/owner_station_restock_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/owner_station_restock_btn3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingVertical="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>