<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OwnerPriceUpdate">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="162dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/fuelpass_station_management_logo" />

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="410dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.19999999">

        <TextView
            android:id="@+id/owner_price_update_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingBottom="40dp"
            android:text="@string/owner_price_update_header"
            android:textColor="@color/color_1"
            android:textSize="34sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_field_style">

            <Spinner
                android:id="@+id/owner_price_update_input1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/owner_price_update_input1"
                android:backgroundTint="@color/color_1"
                android:contentDescription="@string/owner_price_update_input1"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white" />

        </RelativeLayout>


        <EditText
            android:id="@+id/owner_price_update_input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_field_style"
            android:ems="10"
            android:fontFamily="@font/quicksand_semi_bold"
            android:hint="@string/owner_price_update_input2"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/owner_price_update_input3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_field_style"
            android:ems="10"
            android:fontFamily="@font/quicksand_semi_bold"
            android:hint="@string/owner_price_update_input3"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/owner_price_update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_1"
            android:fontFamily="@font/quicksand_bold"
            android:paddingVertical="20dp"
            android:text="@string/owner_price_update_btn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>